Atualização do Gráfico

--- a/microssatelites/templates/lixo.html
+++ b/microssatelites/templates/lixo.html
@@ -634,3 +634,7 @@
   //   status.innerHTML = event.target.responseText;
   //   progressBar.value = 0; //wil clear progress bar after successful upload
   // }
+
+  <li><a class="dropdown-item" href="#">Another action</a></li>
+  <li><hr class="dropdown-divider"></li>
+  <li><a class="dropdown-item" href="#">Something else here</a></li>
