--- a/microssatelites/templates/index.html
+++ b/microssatelites/templates/index.html
@@ -31,6 +31,237 @@
           <div class="col-xl-12 col-md-12 mb-12">
               <div class="card border-left-primary shadow h-100 py-2">
                   <div class="card-body">
+                  <style>
+                    .table-item-center th, td{
+                      text-align: center;
+                    }
+                    .code {
+                      text-align: left;
+                    }
+                  </style>
+                  <table class="table table-item-center">
+                    <thead>
+                      <tr>
+                        <th class="align-items-center">
+                          Etapa 01
+                        </th>
+                        <th>
+                          Etapa 02
+                        </th>
+                        <th>
+                          Etapa 03
+                        </th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <!--SPINNERS-->
+                        <style>
+                          .ball {
+                            width: 10px;
+                            height: 10px;
+                            margin: 10px auto;
+                            border-radius: 50px;
+                          }
+
+                          .ball:nth-child(1) {
+                            background: #ffffff;
+                            -webkit-animation: right 1s infinite ease-in-out;
+                            -moz-animation: right 1s infinite ease-in-out;
+                            animation: right 1s infinite ease-in-out;
+                          }
+
+                          .ball:nth-child(2) {
+                            background: #ffffff;
+                            -webkit-animation: left 1.1s infinite ease-in-out;
+                            -moz-animation: left 1.1s infinite ease-in-out;
+                            animation: left 1.1s infinite ease-in-out;
+                          }
+
+                          .ball:nth-child(3) {
+                            background: #ffffff;
+                            -webkit-animation: right 1.05s infinite ease-in-out;
+                            -moz-animation: right 1.05s infinite ease-in-out;
+                            animation: right 1.05s infinite ease-in-out;
+                          }
+
+                          .ball:nth-child(4) {
+                            background: #ffffff;
+                            -webkit-animation: left 1.15s infinite ease-in-out;
+                            -moz-animation: left 1.15s infinite ease-in-out;
+                            animation: left 1.15s infinite ease-in-out;
+                          }
+
+                          .ball:nth-child(5) {
+                            background: #ffffff;
+                            -webkit-animation: right 1.1s infinite ease-in-out;
+                            -moz-animation: right 1.1s infinite ease-in-out;
+                            animation: right 1.1s infinite ease-in-out;
+                          }
+
+                          .ball:nth-child(6) {
+                            background: #ffffff;
+                            -webkit-animation: left 1.05s infinite ease-in-out;
+                            -moz-animation: left 1.05s infinite ease-in-out;
+                            animation: left 1.05s infinite ease-in-out;
+                          }
+
+                          .ball:nth-child(7) {
+                            background: #ffffff;
+                            -webkit-animation: right 1s infinite ease-in-out;
+                            -moz-animation: right 1s infinite ease-in-out;
+                            animation: right 1s infinite ease-in-out;
+                          }
+
+                          @-webkit-keyframes right {
+                            0% {
+                              -webkit-transform: translate(-15px);
+                            }
+                            50% {
+                              -webkit-transform: translate(15px);
+                            }
+                            100% {
+                              -webkit-transform: translate(-15px);
+                            }
+                          }
+
+                          @-webkit-keyframes left {
+                            0% {
+                              -webkit-transform: translate(15px);
+                            }
+                            50% {
+                              -webkit-transform: translate(-15px);
+                            }
+                            100% {
+                              -webkit-transform: translate(15px);
+                            }
+                          }
+
+                          @-moz-keyframes right {
+                            0% {
+                              -moz-transform: translate(-15px);
+                            }
+                            50% {
+                              -moz-transform: translate(15px);
+                            }
+                            100% {
+                              -moz-transform: translate(-15px);
+                            }
+                          }
+
+                          @-moz-keyframes left {
+                            0% {
+                              -moz-transform: translate(15px);
+                            }
+                            50% {
+                              -moz-transform: translate(-15px);
+                            }
+                            100% {
+                              -moz-transform: translate(15px);
+                            }
+                          }
+
+                          @keyframes right {
+                            0% {
+                              transform: translate(-15px);
+                            }
+                            50% {
+                              transform: translate(15px);
+                            }
+                            100% {
+                              transform: translate(-15px);
+                            }
+                          }
+
+                          @keyframes left {
+                            0% {
+                              transform: translate(15px);
+                            }
+                            50% {
+                              transform: translate(-15px);
+                            }
+                            100% {
+                              transform: translate(15px);
+                            }
+                          }
+                        </style>
+                        <td>
+                          <div id="spinner01" style="display: none">
+                            <div class="ball" style="background: #4e73df"></div>
+                            <div class="ball" style="background: #4e73df"></div>
+                            <div class="ball" style="background: #4e73df"></div>
+                            <div class="ball" style="background: #4e73df"></div>
+                            <div class="ball" style="background: #4e73df"></div>
+                            <div class="ball" style="background: #4e73df"></div>
+                            <div class="ball" style="background: #4e73df"></div>
+                          </div>
+                          <h1 id="check01" style="display: none"><i class="fa fa-check-circle text-primary" aria-hidden="true"></i></h1>
+                          {% comment %} <div class="spinner-grow text-primary" id="spinner01" style="display: none" role="status">
+                            <span class="visually-hidden">Loading...</span>
+                          </div> {% endcomment %}
+                        </td>
+                        <td>
+                          <div id="spinner02" style="display: none">
+                              <div class="ball" style="background: #1cc88a"></div>
+                              <div class="ball" style="background: #1cc88a"></div>
+                              <div class="ball" style="background: #1cc88a"></div>
+                              <div class="ball" style="background: #1cc88a"></div>
+                              <div class="ball" style="background: #1cc88a"></div>
+                              <div class="ball" style="background: #1cc88a"></div>
+                              <div class="ball" style="background: #1cc88a"></div>
+                          </div>
+                          <h1 id="check02" style="display: none"><i class="fa fa-check-circle text-success" aria-hidden="true"></i></h1>
+                          {% comment %} <div class="spinner-grow text-success" id="spinner02" style="display: none" role="status">
+                            <span class="visually-hidden">Loading...</span>
+                          </div> {% endcomment %}
+                        </td>
+                        <td>
+                          <div id="spinner03" style="display: none">
+                            <div class="ball" style="background: #36b9cc"></div>
+                            <div class="ball" style="background: #36b9cc"></div>
+                            <div class="ball" style="background: #36b9cc"></div>
+                            <div class="ball" style="background: #36b9cc"></div>
+                            <div class="ball" style="background: #36b9cc"></div>
+                            <div class="ball" style="background: #36b9cc"></div>
+                            <div class="ball" style="background: #36b9cc"></div>
+                          </div>
+                          <h1 id="check03" style="display: none"><i class="fa fa-check-circle text-info" aria-hidden="true"></i></h1>
+                          {% comment %} <div class="spinner-grow text-info" id="spinner03" style="display: none" role="status">
+                            <span class="visually-hidden">Loading...</span>
+                          </div> {% endcomment %}
+                        </td>
+                      </tr>
+                      <!--BARRAS-->
+                      <tr>
+                        <td>
+                          <div class="progress" id="progress_div_01">
+                            <div class="progress-bar bg-primary" id="progress_bar_01" width="50%" role="progressbar" aria-label="Example with label" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                          </div>
+                        </td>
+                         <td>
+                          <div class="progress" id="progress_div_02">
+                            <div class="progress-bar bg-success" id="progress_bar_02" role="progressbar" aria-label="Example with label" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                          </div>
+                        </td>
+                         <td>
+                          <div class="progress" id="progress_div_03">
+                            <div class="progress-bar bg-info" id="progress_bar_03" role="progressbar" aria-label="Example with label" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                          </div>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td colspan="4" id="areaCode" class="code table-active" style="display: none;">
+                          <samp class="text-black-50 code">Output processament</samp>
+                          <hr>
+                          <div class="code">
+                            <samp id="labelStatus"></samp>
+                          </div>
+                        </td>
+                      </tr>
+                      <!--STATUS-->
+                      
+                    </tbody>
+                  </table>
                     <form class="user" enctype="multipart/form-data" id="upload-form" action="{% url 'index' %}" method="POST" onsubmit="spinner()" enctype="multipart/form-data">
                       {% csrf_token %}
                       <h1 class="h3 mb-0 text-gray-800">User Information</h1>
@@ -286,7 +517,11 @@
 
   document.getElementById('upload-btn').addEventListener('click', function(){
     getProcessingStatus();
-    //document.getElementById('spinner01').style.display = 'block';
+    {% comment %} getProcessingStatus(); {% endcomment %}
+    {% comment %} $("#upload-form").hide();
+    $("#spinner01").show();
+    $("#check02").show();
+    $("#spinner03").show(); {% endcomment %}
   });
 
 </script>
@@ -294,6 +529,8 @@
   function spinner(){
     $("#spinner").show();
     $("#submit").hide();
+    $("#upload-form").hide();
+    $("#areaCode").show();
     //Atualiza as informações do Upload
     upload();
     // Iniciar a obtenção do status do processamento
@@ -310,8 +547,6 @@
          $("#custom_params").hide();
          $("#paramDefault").show();
      };
-
-
 
      // Resultado em tempo Real do Range
      let $range2 = document.querySelector('#dMaxRangeInput'),
@@ -341,10 +576,16 @@
        $("#spinner01").show();
     }else if(step01 == true){
         $("#spinner01").hide();
+        $("#check01").show();
+        progress_bar_01.style["width"]=""+100+"%";
+        progress_bar_01.innerHTML=""+100+"%";
         if(step02 == false){
           $("#spinner02").show();
         }else if(step02 == true){
             $("#spinner02").hide();
+            $("#check02").show();
+            progress_bar_02.style["width"]=""+100+"%";
+            progress_bar_02.innerHTML=""+100+"%";
             if(step03 == false){
               $("#spinner03").show();
             }
@@ -361,6 +602,13 @@
       type: "GET",
       url: "/get_processing_status/",
       success: function(data) {
+        if (data.haveProject == false){
+          data
+        }else{
+          updateProgress(data.statusProcessament, data.percent_complete, data.step01, data.step02, data.step03);
+          if (data.step03 == false) {
+            setTimeout(getProcessingStatus, 1000);
+          }
         console.log(data);
         updateProgress(data.statusProcessament, data.percent_complete, data.step01, data.step02, data.step03);
         if (data.is_complete == false) {
@@ -368,8 +616,7 @@
         }
       }
     });
-}
-
+  }
 </script>
 <!-- <script>
   var upload_form = document.getElementById('upload-form');
