--- a/microssatelites/templates/index.html
+++ b/microssatelites/templates/index.html
@@ -326,91 +326,6 @@
                   <div class="progress mr-2" id="progress_div" style="display: none">
                     <div class="progress-bar bg-info" id="progress_bar"  role="progressbar" aria-label="Example with label" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
-                  <style>
-                    .table-item-center th, td{
-                      text-align: center;
-                    }
-                    .code {
-                      text-align: left;
-                    }
-                  </style>
-                  <table class="table table-item-center">
-                    <thead>
-                      <tr>
-                        <th class="align-items-center">
-                          Etapa 01
-                        </th>
-                        <th>
-                          Etapa 02
-                        </th>
-                        <th>
-                          Etapa 03
-                        </th>
-                        <th>
-                          Etapa 04
-                        </th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <!--SPINNERS-->
-                        <td>
-                          <div class="spinner-grow text-primary" id="spinner01" style="display: none" role="status">
-                            <span class="visually-hidden">Loading...</span>
-                          </div>
-                        </td>
-                        <td>
-                          <div class="spinner-grow text-secondary" id="spinner02" style="display: none" role="status">
-                            <span class="visually-hidden">Loading...</span>
-                          </div>
-                        </td>
-                        <td>
-                          <div class="spinner-grow text-success" id="spinner03" style="display: none" role="status">
-                            <span class="visually-hidden">Loading...</span>
-                          </div>
-                        </td>
-                        <td>
-                          <div class="spinner-grow text-info" id="spinner04" style="display: none" role="status">
-                            <span class="visually-hidden">Loading...</span>
-                          </div>
-                        </td>
-                      </tr>
-                      <!--BARRAS-->
-                      <tr>
-                        <td>
-                          <div class="progress" id="progress_div_01">
-                            <div class="progress-bar" id="progress_bar_01" role="progressbar" aria-label="Example with label" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-                          </div>
-                        </td>
-                         <td>
-                          <div class="progress" id="progress_div_02">
-                            <div class="progress-bar" id="progress_bar_02" role="progressbar" aria-label="Example with label" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-                          </div>
-                        </td>
-                         <td>
-                          <div class="progress" id="progress_div_03">
-                            <div class="progress-bar" id="progress_bar_03" role="progressbar" aria-label="Example with label" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-                          </div>
-                        </td>
-                         <td>
-                          <div class="progress" id="progress_div_04">
-                            <div class="progress-bar" id="progress_bar_04" role="progressbar" aria-label="Example with label" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-                          </div>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td colspan="4" class="code table-active">
-                          <samp class="text-black-50 code">Output processament</samp>
-                          <hr>
-                          <div class="code">
-                            <samp id="labelStatus"></samp>
-                          </div>
-                        </td>
-                      </tr>
-                      <!--STATUS-->
-                      
-                    </tbody>
-                  </table>
                   <div>
                     <!-- BOTÃO DE TESTE -->
                     <div>
@@ -516,12 +431,8 @@
   }
 
   document.getElementById('upload-btn').addEventListener('click', function(){
+    $("#upload-form").hide();
     getProcessingStatus();
-    {% comment %} getProcessingStatus(); {% endcomment %}
-    {% comment %} $("#upload-form").hide();
-    $("#spinner01").show();
-    $("#check02").show();
-    $("#spinner03").show(); {% endcomment %}
   });
 
 </script>
@@ -564,7 +475,7 @@
   }
 
   // Função para atualizar a barra de progresso do processamento
-  function updateProgress(statusProcessament, percentage, step01, step02, step03) {
+  function updateProgress(statusProcessament, step01, step02, step03, percentage) {
     {% comment %}var progress = document.getElementById("progress");
     progress.style.width = percent + "%"; {% endcomment %}
 
@@ -574,6 +485,7 @@
 
     if(step01 == false){
        $("#spinner01").show();
+       $("#areaCode").show();
     }else if(step01 == true){
         $("#spinner01").hide();
         $("#check01").show();
@@ -601,17 +513,9 @@
     $.ajax({
       type: "GET",
       url: "/get_processing_status/",
-      success: function(data) {
-        if (data.haveProject == false){
-          data
-        }else{
-          updateProgress(data.statusProcessament, data.percent_complete, data.step01, data.step02, data.step03);
-          if (data.step03 == false) {
-            setTimeout(getProcessingStatus, 1000);
-          }
-        console.log(data);
-        updateProgress(data.statusProcessament, data.percent_complete, data.step01, data.step02, data.step03);
-        if (data.is_complete == false) {
+      success: function(data){
+        updateProgress(data.statusProcessament, data.step01, data.step02, data.step03, data.percent03);
+        if (data.step03 == false) {
           setTimeout(getProcessingStatus, 1000);
         }
       }
